# neofuzz

./: LICENSE  README.md  countries.txt  mess.py  pyproject.toml
docs/: api_reference.rst  conf.py  custom_vectorizer.rst  getting_started.rst  index.rst  metadata.rst  persistence.rst  what_is_neofuzz.rst
docs/_build/doctrees/: api_reference.doctree  custom_vectorizer.doctree  environment.pickle  getting_started.doctree  index.doctree  metadata.doctree  persistence.doctree  what_is_neofuzz.doctree
docs/_build/html/: .buildinfo  api_reference.html  custom_vectorizer.html  genindex.html  getting_started.html  index.html  metadata.html  objects.inv  persistence.html  py-modindex.html  search.html  searchindex.js  what_is_neofuzz.html
docs/_build/html/_sources/: api_reference.rst.txt  custom_vectorizer.rst.txt  index.rst.txt  persistence.rst.txt
fuzz_lightyear/: search.py
neofuzz/: __init__.py  process.py  tokenization.py
tests/: test_integration.py
