[tool.black]
line-length=79
[tool.poetry]
name = "neofuzz"
version = "0.1.3"
description = "Blazing fast fuzzy text search for Python."
authors = ["Márton Kardos <power.up1163@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "neofuzz"}]

[tool.poetry.dependencies]
python = ">=3.8"
scikit-learn = ">=1.1.0, <1.3.0"
pynndescent = ">=0.5.0, <0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
