[tool.black]
line-length=79
[tool.poetry]
name = "neofuzz"
version = "0.3.2"
description = "Blazing fast fuzzy text search for Python."
authors = ["Márton Kardos <power.up1163@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "neofuzz"}]

[tool.poetry.dependencies]
python = ">=3.8"
scikit-learn = ">=1.1.0, <1.6.0"
pynndescent = "0.5.12"
numpy = ">=0.22.0, <2.0.0"
tokenizers = ">=0.19.0, <0.20.0"
joblib = ">=1.4.0, <1.5.0"
thefuzz = ">=0.22.0, <0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
